<resources>

    <!-- App -->

    <string name="app_name">Muisti</string>

    <!-- Main -->

    <string name="title_activity_main">Main</string>
    <string name="preview_button">Preview</string>
    <string name="settings_button">Settings</string>

    <!-- Device settings -->

    <string name="device_settings">Device settings</string>
    <string name="exhibition_perference_loading">Loading…</string>
    <string name="exhibition_perference_not_set">Not set</string>
    <string name="exhibition_perference_title">Exhibition</string>
    <string name="exhibition_perference_save">Exit</string>
    <string name="exhibition_device_perference_title">Exhibition Device</string>
    <string name="exhibition_rfid_antennas_perference_title">Rfid Antennas</string>
    <string name="flip_forced_rotation_title">Flip forced rotation.</string>
    <string name="force_video_play_title">Force video play.</string>
    <string name="testText">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using Content here, content here, making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for lorem ipsum will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</string>
    <string name="intro_text">Tule ja tutustu näyttelypisteeseen</string>
    <!-- Preview -->

    <string name="title_activity_preview">Page preview</string>
    <string name="preview_page_button">Preview page</string>
    <string name="logout_warning">Olet Kirjautumassa ulos %1$s</string>
    <string name="deviceName">Device name</string>
    <string name="name_of_device">Name of device</string>
    <string name="deviceDescription">Device description</string>
    <string name="description_of_device">Description of device</string>
    <string name="saveSetup">Save setup</string>
    <string name="waitSetupApproval">Waiting for setup approval</string>
    <string name="deviceApproved">Device has been approved and is ready to use!</string>

</resources>

