<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/device_settings" app:key="device_settings">

        <ListPreference
            app:key="exhibition"
            app:summary="@string/exhibition_perference_loading"
            app:title="@string/exhibition_perference_title" />

        <ListPreference
            app:summary="@string/exhibition_perference_loading"
            app:key="exhibition_device"
            app:title="@string/exhibition_device_perference_title" />

        <EditTextPreference
            app:summary="@string/exhibition_perference_not_set"
            app:title="@string/exhibition_rfid_antennas_perference_title"
            android:inputType="text"
            android:enabled="false"
            app:key="rfid_antennas" />

    </PreferenceCategory>

</PreferenceScreen>
