<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="32dp">

        <TextView
            android:id="@+id/deviceNameLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/deviceName"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/deviceNameInput"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:ems="10"
            android:hint="@string/name_of_device"
            android:inputType="text"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/deviceDescriptionLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/deviceDescription"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/setupStatusText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:text=""
            android:visibility="gone"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:layout_gravity="center_horizontal"/>

        <EditText
            android:id="@+id/deviceDescriptionInput"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/description_of_device"
            android:nextFocusDown="@id/saveSetup"
            android:importantForAccessibility="yes"
            android:inputType="textMultiLine" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/saveSetup"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:importantForAccessibility="yes"
                android:text="@string/saveSetup" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>